@startuml

title __BASEAMINECORREC's Class Diagram__\n

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class DNARepository {
            + load(String uri)
            + getBaseList() : List<Base>
        }
      }
    }
  }

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class Ribosome {
            + translate(RNA rna) : List<AminoAcid>
        }
      }
    }
  }

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class Protein {
            - chain : List<AminoAcid>
            + {static} factory(aminoAcidList : List<AminoAcid>) : List<Protein>
        }
      }
    }
  }


  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class AminoAcid {
            - symbol : String
            - trigram : String
            - name : String
            + AminoAcid()
            + getSymbol()
            + getTrigram()
            + getName()
            + toString()
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class Base {
            - symbol : String
            - name : String
            - familly : String
            + getSymbol()
            + getName()
            + getFamilly()
            + Base()
            + getApparie()
            + toString()
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class DNA {
            - strand : ArrayList<Base>
            + DNA()
            + toString()
            + getComplementary()
            + transcription()
        }
      }
    }
  }


  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class RNA {
            - strand : ArrayList<Base>
            + RNA()
            + toString()
            + getStrand()
            + translate()
        }
      }
    }
  }


  Base o--> "1" Base : apparie
  DNA o--> "*" Base : strand
  DNA o--> "1" RNA : transcription
  RNA o--> "*" AminoAcid : translation
  Protein o--> "*" AminoAcid : chain
  Ribosome o--> "1" RNA
  Ribosome o--> "*" AminoAcid


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
